chapter_02/ToDo_app/users-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  selector:
    app: users-api
  ports:
    - protocol: TCP
      port: 8083
